modificación de netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 [build]
 
   # Directorio donde Netlify buscará las funciones serverless.
-  command = "# no build command"
+#  command = "# no build command"
   functions = "netlify/functions"
-  publish = "public"
+#  publish = "public"
 
